--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.9.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
     "cross-env": "^6.0.3",
     "laravel-mix": "^5.0.0",
     "resolve-url-loader": "^3.1.0",
