--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "npx eleventy --serve & npm run development -- --watch",
-    "dev": "npx eleventy & npm run development",
+    "watch": "npm run development -- --watch && npx eleventy --serve",
+    "dev": "npm run development && npx eleventy",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npx eleventy & npm run production",
-    "production": "npx eleventy & cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "prod": "npm run production && npx eleventy",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && npx eleventy"
   },
   "keywords": [],
   "author": "",
