--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0"
+  },
+  "dependencies": {
+    "clean-css": "^4.2.3",
+    "tailwindcss": "^1.2.0"
   }
 }
