--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.9.0",
+    "@11ty/eleventy": "^0.10.0",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
     "cross-env": "^6.0.3",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "clean-css": "^4.2.3",
+    "js-yaml": "^3.13.1",
     "tailwindcss": "^1.2.0"
   }
 }
