chore (home): outline content

--- a/src/_data/home.yaml
+++ b/src/_data/home.yaml
@@ -1,6 +1,4 @@
-introHeading: Helping businesses develop and execute website strategy to thrive online
-introContent: |
-  I’m Matthew Passmore, a website strategist based in Cardiff, Wales. I help businesses develop and execute website strategy to thrive online.,
+strapline: <span>In a nutshell:</span> Helping businesses develop and execute website strategy to thrive online
 
 problems: 
   -
