feat (home): reduce content to mvp, with no links to rest of site

--- a/src/_data/home.yaml
+++ b/src/_data/home.yaml
@@ -1,7 +1,9 @@
-strapline: <span>In a nutshell:</span> Helping businesses develop and execute website strategy to thrive online
+strapline: Helping organisations develop and execute website strategy to thrive online
 
 servicesHeading: How I can help your business
 services: 
+  -
+    title: Get your audience to take action
   -
     title: Run an important project your organization needs to launch.
     desc: Through my design collaborative SuperFriendly, I build specialized teams of experts that ship the highest quality products and teach you to level up your skills as we progress.
