chore (meta): add page title

--- a/src/_data/site.yaml
+++ b/src/_data/site.yaml
@@ -1,3 +1,4 @@
+name: Matthew Passmore
 tel: +44 (0) 7866 277 464
 email: hello@matthewpassmore.co.uk
 intro: I’m Matthew Passmore, an independent web consultant based in Cardiff, Wales. I help great organisations engage their online audience, and turn engagement into action.
